--- a/python_intro_solutions.ipynb
+++ b/python_intro_solutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python_intro.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
