--- a/energy_consumption.ipynb
+++ b/energy_consumption.ipynb
@@ -438,7 +438,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "9. Fetch the Sankey definition for the US energy consumption example from the `\"\"\"define the Sankey diagram definition\"\"\"` box, adapt this to fit with your new process groups defined in step 7. Adapting the flows can be quite fiddly, we need to think effectively about the order of the flows. If you've spent over 30 minutes trying to work this out without success consider the solution sheet, but it's worth getting a bit frustrated first to understand how these flows hold together."
+        "9. Fetch the Sankey definition for the US energy consumption example from the `\"\"\"define the Sankey diagram definition\"\"\"` box, adapt this to fit with your new process groups defined in step 7. Adapting the flows can be quite fiddly, so start simple by commenting most lines out and begin with just 2 nodes, their ordering and a bundle linking them. Build this up by thinking effectively about the order of the flows. If you've spent over 30 minutes trying to work this out without success consider the solution sheet, but it's worth getting a bit frustrated first to understand how these flows hold together."
       ],
       "metadata": {
         "id": "IsEQ9EAHidc9"
