--- a/energy_consumption.ipynb
+++ b/energy_consumption.ipynb
@@ -76,7 +76,7 @@
       "source": [
         "## Task 1 - US example \n",
         "\n",
-        "Step through this section to see an example for the US based on the [Sankey diagrams of US energy consumption from the Lawrence Livermore National Laboratory](https://flowcharts.llnl.gov/) (thanks to John Muth for the suggestion and transcribing the data)."
+        "Step through this section to see an example for the US based on the [Sankey diagrams of US energy consumption from the Lawrence Livermore National Laboratory](https://flowcharts.llnl.gov/)."
       ],
       "metadata": {
         "id": "POjd-O7vCEbE"
@@ -216,7 +216,7 @@
         "\n",
         "Follow the steps below to create an equivalent Sankey for a different country. Fill in each of the lines with a `##Complete here##` entry. If you get completely lost then feel free to consult the [solutions sheet](https://colab.research.google.com/github/Resource-Efficiency-Collective/coding-tutorials/blob/main/energy_consumption_solution.ipynb) for inspiration, but please do have a go first.\n",
         "\n",
-        "  1. Find and download the IEA World Energy Balances Highlights spreadsheet, from the webpage: https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Then upload it to Colab using the `upload` button in the left panel.\n",
+        "  1. Find and download the IEA World Energy Balances Highlights spreadsheet, from the webpage: https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open it up to check what it it loooks like and `Enable Editing`. Then upload it to Colab using the `upload` button in the left panel. \n",
         "\n",
         "  2. In the next cell import the Excel sheet to a pandas DataFrame. To find appropriate functions for the next steps either have a look at the [pandas documentation](https://pandas.pydata.org/docs/reference/index.html), or remember [your best friend](https://www.google.com/) when writing code.\n",
         "\n"
