Download link update

--- a/L4_Drawing_Sankeys.ipynb
+++ b/L4_Drawing_Sankeys.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/resource-efficiency-collective/coding-tutorials/blob/main/L4_Drawing_Sankeys.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "H7SRgDxZVrwr"
       },
       "source": [
@@ -41,7 +31,7 @@
       "source": [
         "\n",
         "\n",
-        "1.   Open SankeyMATIC in a web browser: http://sankeymatic.com \n",
+        "1.   Open SankeyMATIC in a web browser: http://sankeymatic.com\n",
         "  -  Read the home page, and spend some time playing with the example in the \"Build a Sankey Diagram\" tab, including understanding what each of the functionally options does.\n",
         "2.   Run the following cells to first import the example data used throughout this notebook and second download a file called `us-energy-consumption.csv`. This will appear in your Downloads folder, please then open this file.\n",
         "\n"
@@ -53,21 +43,29 @@
     {
       "cell_type": "code",
       "source": [
+        "# @markdown Run this cell once to load data\n",
         "%%capture\n",
-        "\"\"\"Import example data\"\"\"\n",
-        "# Import packages\n",
-        "import gdown, os\n",
-        "from google.colab import files\n",
+        "import os\n",
         "\n",
-        "# Import and unzip files -> You can then view them in the left files panel\n",
-        "folder, zip_path = 'example_data', 'example_data.zip'\n",
-        "if not os.path.exists(folder): \n",
-        "  gdown.download('https://drive.google.com/uc?id=1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', zip_path ,quiet=True)\n",
-        "  ! unzip $zip_path -d 'example_data'\n",
-        "  ! rm $zip_path"
+        "# Function to download and unzip the examples file from Google Drive\n",
+        "def download_and_unzip_from_google_drive(file_id = '1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', destination_folder = 'example_data'):\n",
+        "    if os.path.exists(destination_folder):\n",
+        "      print('zip file already downloaded. If you want to reload then please delete the example_data folder.')\n",
+        "      return\n",
+        "\n",
+        "    else:\n",
+        "      !wget -O temp.zip $download_url\n",
+        "      os.makedirs(destination_folder)\n",
+        "\n",
+        "      !unzip temp.zip -d $destination_folder\n",
+        "\n",
+        "      os.remove(\"temp.zip\")\n",
+        "\n",
+        "download_and_unzip_from_google_drive(file_id, destination_folder)\n"
       ],
       "metadata": {
-        "id": "Wm6N6vusKBht"
+        "cellView": "form",
+        "id": "u4GrDePC5upS"
       },
       "execution_count": null,
       "outputs": []
@@ -114,7 +112,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###A - Floweaver basics \n",
+        "###A - Floweaver basics\n",
         "Let's get you up and running with some basic Sankeys."
       ],
       "metadata": {
@@ -240,7 +238,7 @@
         "\n",
         "# Defining our sources and targets as nodes\n",
         "nodes = {\n",
-        "    'farms': ProcessGroup(['farm1', 'farm2', 'farm3', \n",
+        "    'farms': ProcessGroup(['farm1', 'farm2', 'farm3',\n",
         "                           'farm4', 'farm5', 'farm6']),\n",
         "    'customers': ProcessGroup(['James', 'Mary', 'Fred', 'Susan']),\n",
         "}"
@@ -549,7 +547,7 @@
       "cell_type": "markdown",
       "source": [
         "###B - US Steel imports\n",
-        "If you've managed to get through the whole IEA exercise and created a picture-perfect Sankey that refreshes for any country in a single click, well done! Now consider US Steel import data available [available here](https://www.trade.gov/media/4964). Go back in to your completed version of the [energy_consumption](https://colab.research.google.com/github/Resource-Efficiency-Collective/coding-tutorials/blob/main/energy_consumption.ipynb) notebook and try to use the same functions as you made for the IEA data. They will need to be adjusted to both cater both for this dataset and still work with the IEA data. "
+        "If you've managed to get through the whole IEA exercise and created a picture-perfect Sankey that refreshes for any country in a single click, well done! Now consider US Steel import data available [available here](https://www.trade.gov/media/4964). Go back in to your completed version of the [energy_consumption](https://colab.research.google.com/github/Resource-Efficiency-Collective/coding-tutorials/blob/main/energy_consumption.ipynb) notebook and try to use the same functions as you made for the IEA data. They will need to be adjusted to both cater both for this dataset and still work with the IEA data."
       ],
       "metadata": {
         "id": "EcrH-TvVRNs8"
@@ -585,8 +583,7 @@
     },
     "colab": {
       "name": "L4_Drawing_Sankeys.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
