Update download link

--- a/L4_Drawing_Sankeys.ipynb
+++ b/L4_Drawing_Sankeys.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Resource-Efficiency-Collective/coding-tutorials/blob/main/L4_Drawing_Sankeys.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "H7SRgDxZVrwr"
       },
       "source": [
@@ -46,6 +56,7 @@
         "# @markdown Run this cell once to load data\n",
         "%%capture\n",
         "import os\n",
+        "from google.colab import files\n",
         "\n",
         "# Function to download and unzip the examples file from Google Drive\n",
         "def download_and_unzip_from_google_drive(file_id = '1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', destination_folder = 'example_data'):\n",
@@ -54,14 +65,15 @@
         "      return\n",
         "\n",
         "    else:\n",
+        "      download_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
         "      !wget -O temp.zip $download_url\n",
-        "      os.makedirs(destination_folder)\n",
         "\n",
+        "      os.makedirs(destination_folder)\n",
         "      !unzip temp.zip -d $destination_folder\n",
         "\n",
         "      os.remove(\"temp.zip\")\n",
         "\n",
-        "download_and_unzip_from_google_drive(file_id, destination_folder)\n"
+        "download_and_unzip_from_google_drive()\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -583,7 +595,8 @@
     },
     "colab": {
       "name": "L4_Drawing_Sankeys.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
