Update download link

--- a/sankey_recipes.ipynb
+++ b/sankey_recipes.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "sankey_recipes.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOxgwKmYvrEo94eYB7sadXW",
+      "authorship_tag": "ABX9TyObZy9r1tjvVZ9DI5fUB6f2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,10 +43,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "aaB-_89wwNy2"
+        "id": "aaB-_89wwNy2",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
+        "# @markdown Run this cell to download data. You can view it in the panel on the left.\n",
         "%%capture\n",
         "\"\"\"Installation and downloads\"\"\"\n",
         "# Install floweaver and display widget packages\n",
@@ -59,12 +61,22 @@
         "from ipywidgets import HBox\n",
         "import gdown, os\n",
         "\n",
-        "# Import and unzip example data -> You can then view them in the left files panel\n",
-        "folder, zip_path = 'example_data', 'example_data.zip'\n",
-        "if not os.path.exists(folder): \n",
-        "  gdown.download('https://drive.google.com/uc?id=1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', zip_path ,quiet=True)\n",
-        "  ! unzip $zip_path -d 'example_data'\n",
-        "  ! rm $zip_path\n",
+        "# Function to download and unzip the examples file from Google Drive -> You can view them in the left panel\n",
+        "def download_and_unzip_from_google_drive(file_id = '1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', destination_folder = 'example_data'):\n",
+        "    if os.path.exists(destination_folder):\n",
+        "      print('zip file already downloaded. If you want to reload then please delete the example_data folder.')\n",
+        "      return\n",
+        "\n",
+        "    else:\n",
+        "      download_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
+        "      !wget -O temp.zip $download_url\n",
+        "\n",
+        "      os.makedirs(destination_folder)\n",
+        "      !unzip temp.zip -d $destination_folder\n",
+        "\n",
+        "      os.remove(\"temp.zip\")\n",
+        "\n",
+        "download_and_unzip_from_google_drive()\n",
         "\n",
         "# Set the default size to fit the documentation better.\n",
         "size = dict(width=570, height=300)"
