IEA file update

--- a/energy_consumption_solution.ipynb
+++ b/energy_consumption_solution.ipynb
@@ -35,10 +35,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bY7nXRLo3bCJ"
+        "id": "bY7nXRLo3bCJ",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
+        "# @markdown Run this cell to download data. You can view it in the panel on the left.\n",
         "%%capture\n",
         "\"\"\"Installation and downloads\"\"\"\n",
         "# Install floweaver and display widget packages\n",
@@ -49,12 +51,22 @@
         "import gdown, os\n",
         "from google.colab import files\n",
         "\n",
-        "# Import and unzip files -> You can then view them in the left files panel\n",
-        "folder, zip_path = 'example_data', 'example_data.zip'\n",
-        "if not os.path.exists(folder): \n",
-        "  gdown.download('https://drive.google.com/uc?id=1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', zip_path ,quiet=True)\n",
-        "  ! unzip $zip_path -d 'example_data'\n",
-        "  ! rm $zip_path"
+        "# Function to download and unzip the examples file from Google Drive -> You can view them in the left panel\n",
+        "def download_and_unzip_from_google_drive(file_id = '1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', destination_folder = 'example_data'):\n",
+        "    if os.path.exists(destination_folder):\n",
+        "      print('zip file already downloaded. If you want to reload then please delete the example_data folder.')\n",
+        "      return\n",
+        "\n",
+        "    else:\n",
+        "      download_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
+        "      !wget -O temp.zip $download_url\n",
+        "\n",
+        "      os.makedirs(destination_folder)\n",
+        "      !unzip temp.zip -d $destination_folder\n",
+        "\n",
+        "      os.remove(\"temp.zip\")\n",
+        "\n",
+        "download_and_unzip_from_google_drive()"
       ]
     },
     {
@@ -74,7 +86,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Task 1 - US example \n",
+        "## Task 1 - US example\n",
         "\n",
         "Step through this section to see an example for the US based on the [Sankey diagrams of US energy consumption from the Lawrence Livermore National Laboratory](https://flowcharts.llnl.gov/)."
       ],
@@ -124,10 +136,10 @@
         "    'imports': ProcessGroup(['Net_Electricity_Import'], title='Net electricity imports'),\n",
         "    'electricity': ProcessGroup(['Electricity_Generation'], title='Electricity Generation'),\n",
         "    'uses': ProcessGroup('type == \"use\"', partition=Partition.Simple('process', uses)),\n",
-        "    \n",
+        "\n",
         "    'energy_services': ProcessGroup(['Energy_Services'], title='Energy services'),\n",
         "    'rejected': ProcessGroup(['Rejected_Energy'], title='Rejected energy'),\n",
-        "    \n",
+        "\n",
         "    'direct_use': Waypoint(Partition.Simple('source', [\n",
         "        # This is a hack to hide the labels of the partition, there should be a better way...\n",
         "        (' '*i, [k]) for i, k in enumerate(sources)\n",
@@ -216,9 +228,9 @@
         "\n",
         "Follow the steps below to create an equivalent Sankey for a different country.\n",
         "\n",
-        "  1. Find and download the IEA World Energy Balances Highlights spreadsheet, from the webpage: https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open it up to check what it it loooks like and `Enable Editing`. Then upload it to Colab using the `upload` button in the left panel. \n",
+        "  1. Find and download the IEA World Energy Balances Highlights spreadsheet, from the webpage: https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open it up and navigate to the `TimeSeries_1971-2022` sheet. Save this sheet as a .csv file which is much easier to read into most programmes than an Excel file. Then upload it to Colab using the `upload` button in the left panel or by simply dragging and dropping.\n",
         "\n",
-        "  2. In the next cell import the Excel sheet to a pandas DataFrame. To find appropriate functions for the next steps either have a look at the [pandas documentation](https://pandas.pydata.org/docs/reference/index.html), or remember [your best friend](https://www.google.com/) when writing code.\n",
+        "  2. In the next cell import the sheet to a pandas DataFrame. To find appropriate functions for the next steps either have a look at the [pandas documentation](https://pandas.pydata.org/docs/reference/index.html), or remember [your best friend](https://www.google.com/) when writing code.\n",
         "\n",
         "\n"
       ],
@@ -231,9 +243,8 @@
       "source": [
         "\"\"\"Read in an Excel file\"\"\"\n",
         "import pandas as pd\n",
-        "fileName = 'WorldEnergyBalancesHighlights2021.xlsx'\n",
-        "sheetName = 'TimeSeries_1971-2020'\n",
-        "data = pd.read_excel(fileName,sheet_name=sheetName,header=1)"
+        "fileName = 'WorldEnergyBalancesHighlights2023.csv'\n",
+        "data = pd.read_csv(fileName, skiprows=1)"
       ],
       "metadata": {
         "id": "Bx6dXau0CKmX"
@@ -276,7 +287,7 @@
       "cell_type": "code",
       "source": [
         "\"\"\"Get values for latest year\"\"\"\n",
-        "lastYear = max([colName for colName in data.columns if isinstance(colName, int)])\n",
+        "lastYear = '2021'\n",
         "filterData = countryData[['Product','Flow',lastYear]]\n",
         "\n",
         "# Display data\n",
@@ -304,6 +315,8 @@
         "remove = '|'.join(['Production','Total','GWh'])\n",
         "filterData = filterData[~filterData['Product'].str.contains(remove)]\n",
         "filterData = filterData[~filterData['Flow'].str.contains(remove)]\n",
+        "\n",
+        "filterData[lastYear] = filterData[lastYear].astype(int)\n",
         "filterData = filterData[[type(i) is not str for i in filterData[lastYear]]]"
       ],
       "metadata": {
@@ -470,7 +483,7 @@
         "    'import_electricity_2': Waypoint(Partition.Simple('source', (' ')))\n",
         "}\n",
         "\n",
-        "ordering = [ \n",
+        "ordering = [\n",
         "    [[],['imports']],\n",
         "    [['sources'],['import_refining','import_electricity']],\n",
         "    [['direct_use','refining'], ['import_electricity_2']],\n",
@@ -481,7 +494,7 @@
         "\n",
         "bundles = [\n",
         "    Bundle('imports','sources'),\n",
-        "    Bundle('sources', 'refining'),   \n",
+        "    Bundle('sources', 'refining'),\n",
         "    Bundle('sources', 'electricity', waypoints=['direct_use']),\n",
         "    Bundle('sources', 'exports', waypoints=['direct_use','direct_use_2']),\n",
         "    Bundle('sources', 'uses', waypoints=['direct_use','direct_use_2','direct_use_3']),\n",
@@ -565,23 +578,24 @@
         "import pandas as pd\n",
         "from floweaver import *\n",
         "\n",
-        "def draw_Country_Sankey(fileName:str, sheetName:str, params_in:dict=False, diagramParams_in:dict=False):\n",
+        "def draw_Country_Sankey(fileName:str, params_in:dict=False, diagramParams_in:dict=False):\n",
         "    \"\"\"This function creates a Sankey diagram for the data contained in the specified\n",
         "    .xlsx file according to the specified parameters\"\"\"\n",
-        "    \n",
+        "\n",
         "    # Function definitions for each processing stage\n",
-        "    def get_country_data(fileName, sheetName, countryName=False, headerRows=1):\n",
+        "    def get_country_data(fileName, countryName=False, headerRows=1):\n",
         "        \"\"\"Extract data for desired country from Excel sheet to pandas dataFrame\"\"\"\n",
-        "        data = pd.read_excel(fileName,sheet_name=sheetName,header=headerRows)\n",
+        "        data = pd.read_csv(fileName, skiprows=1)\n",
         "        return data.loc[data['Country']==countryName] if countryName else data\n",
         "\n",
-        "    def filter_data(data, source, target, year=False, skiprows=False):\n",
+        "    def filter_data(data, source, target, year='2021', skiprows=False):\n",
         "        \"\"\"Filter dataFrame according to year and removing rows with unused data\"\"\"\n",
-        "        if year is False: year = max([colName for colName in data.columns if isinstance(colName, int)])\n",
         "        if skiprows:\n",
         "          remove = '|'.join(skiprows)\n",
         "          data = data[~data[source].str.contains(remove)]\n",
         "          data = data[~data[target].str.contains(remove)]\n",
+        "\n",
+        "        data[year] = data[year].astype(int)\n",
         "        data = data[[type(i) is not str for i in data[year]]]\n",
         "        return data[[source,target,year]], year\n",
         "\n",
@@ -647,7 +661,7 @@
         "            'import_electricity_2': Waypoint(Partition.Simple('source', (' ')))\n",
         "            },\n",
         "\n",
-        "          'ordering': [ \n",
+        "          'ordering': [\n",
         "              [[],['imports']],\n",
         "              [['sources'],['import_refining','import_electricity']],\n",
         "              [['direct_use','refining'], ['import_electricity_2']],\n",
@@ -658,7 +672,7 @@
         "\n",
         "          'bundles': [\n",
         "              Bundle('imports','sources'),\n",
-        "              Bundle('sources', 'refining'),   \n",
+        "              Bundle('sources', 'refining'),\n",
         "              Bundle('sources', 'electricity', waypoints=['direct_use']),\n",
         "              Bundle('sources', 'exports', waypoints=['direct_use','direct_use_2']),\n",
         "              Bundle('sources', 'uses', waypoints=['direct_use','direct_use_2','direct_use_3']),\n",
@@ -683,18 +697,18 @@
         "              'Fossil Fuels': 'darkgrey',\n",
         "              'Renewable sources':'lightgreen'\n",
         "              }\n",
-        "    } \n",
+        "    }\n",
         "\n",
         "    # Update default parameters if other parameters are passed to the function\n",
         "    if params_in: params.update(params_in)\n",
         "    if diagramParams_in: diagramParams.update(diagramParams)\n",
         "\n",
         "    # Data processing\n",
-        "    countryData = get_country_data(fileName, sheetName, params['countryName'])\n",
-        "    filterData, year = filter_data(countryData,params['source'],params['target'],params['year'],params['skiprows'])\n",
-        "    formattedData = format_data(filterData,colNames={params['source']:'source', params['target']:'target', year:'value'})\n",
+        "    countryData = get_country_data(fileName, params['countryName'])\n",
+        "    filterData, year = filter_data(countryData, params['source'],params['target'], params['year'],params['skiprows'])\n",
+        "    formattedData = format_data(filterData, colNames={params['source']:'source', params['target']:'target', year:'value'})\n",
         "    groupData = group_processes(formattedData, params['groupings'])\n",
-        "    orderedData = reorder_data(groupData,params['reordering'])\n",
+        "    orderedData = reorder_data(groupData, params['reordering'])\n",
         "\n",
         "    # Create processes\n",
         "    processes = create_process_df(params['processes'])\n",
@@ -742,12 +756,12 @@
       "cell_type": "code",
       "source": [
         "# Define variables\n",
-        "fileName = 'WorldEnergyBalancesHighlights2021.xlsx'\n",
-        "sheetName = 'TimeSeries_1971-2020'\n",
+        "fileName = 'WorldEnergyBalancesHighlights2023.csv'\n",
         "country = 'France'\n",
+        "year = '2021'\n",
         "\n",
         "# Call function\n",
-        "diagram = ds.draw_Country_Sankey(fileName, sheetName, {'countryName':country})\n",
+        "diagram = ds.draw_Country_Sankey(fileName, {'year':year, 'countryName':country})\n",
         "\n",
         "# Display Sankey\n",
         "display(diagram)"
