IEA file update

--- a/energy_consumption.ipynb
+++ b/energy_consumption.ipynb
@@ -35,10 +35,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bY7nXRLo3bCJ"
+        "id": "bY7nXRLo3bCJ",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
+        "# @markdown Run this cell to download data. You can view it in the panel on the left.\n",
         "%%capture\n",
         "\"\"\"Installation and downloads\"\"\"\n",
         "# Install floweaver and display widget packages\n",
@@ -49,12 +51,22 @@
         "import gdown, os\n",
         "from google.colab import files\n",
         "\n",
-        "# Import and unzip files -> You can then view them in the left files panel\n",
-        "folder, zip_path = 'example_data', 'example_data.zip'\n",
-        "if not os.path.exists(folder): \n",
-        "  gdown.download('https://drive.google.com/uc?id=1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', zip_path ,quiet=True)\n",
-        "  ! unzip $zip_path -d 'example_data'\n",
-        "  ! rm $zip_path"
+        "# Function to download and unzip the examples file from Google Drive -> You can view them in the left panel\n",
+        "def download_and_unzip_from_google_drive(file_id = '1qriY29v7eKJIs07UxAw5RlJirfwuLnyP', destination_folder = 'example_data'):\n",
+        "    if os.path.exists(destination_folder):\n",
+        "      print('zip file already downloaded. If you want to reload then please delete the example_data folder.')\n",
+        "      return\n",
+        "\n",
+        "    else:\n",
+        "      download_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
+        "      !wget -O temp.zip $download_url\n",
+        "\n",
+        "      os.makedirs(destination_folder)\n",
+        "      !unzip temp.zip -d $destination_folder\n",
+        "\n",
+        "      os.remove(\"temp.zip\")\n",
+        "\n",
+        "download_and_unzip_from_google_drive()"
       ]
     },
     {
@@ -74,7 +86,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Task 1 - US example \n",
+        "## Task 1 - US example\n",
         "\n",
         "Step through this section to see an example for the US based on the [Sankey diagrams of US energy consumption from the Lawrence Livermore National Laboratory](https://flowcharts.llnl.gov/)."
       ],
@@ -124,10 +136,10 @@
         "    'imports': ProcessGroup(['Net_Electricity_Import'], title='Net electricity imports'),\n",
         "    'electricity': ProcessGroup(['Electricity_Generation'], title='Electricity Generation'),\n",
         "    'uses': ProcessGroup('type == \"use\"', partition=Partition.Simple('process', uses)),\n",
-        "    \n",
+        "\n",
         "    'energy_services': ProcessGroup(['Energy_Services'], title='Energy services'),\n",
         "    'rejected': ProcessGroup(['Rejected_Energy'], title='Rejected energy'),\n",
-        "    \n",
+        "\n",
         "    'direct_use': Waypoint(Partition.Simple('source', [\n",
         "        # This is a hack to hide the labels of the partition, there should be a better way...\n",
         "        (' '*i, [k]) for i, k in enumerate(sources)\n",
@@ -214,11 +226,11 @@
       "source": [
         "## Task 2 - Create your own\n",
         "\n",
-        "Follow the steps below to create an equivalent Sankey for a different country. Fill in each of the lines with a `##Complete here##` entry. If you get completely lost then feel free to consult the [solutions sheet](https://colab.research.google.com/github/Resource-Efficiency-Collective/coding-tutorials/blob/main/energy_consumption_solution.ipynb) for inspiration, but please do have a go first.\n",
+        "Follow the steps below to create an equivalent Sankey for a different country.\n",
         "\n",
-        "  1. Find and download the IEA World Energy Balances Highlights spreadsheet, from the webpage: https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open it up to check what it it loooks like and `Enable Editing`. Then upload it to Colab using the `upload` button in the left panel. \n",
+        "  1. Find and download the IEA World Energy Balances Highlights spreadsheet, from the webpage: https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open it up and navigate to the `TimeSeries_1971-2022` sheet. Save this sheet as a .csv file which is much easier to read into most programmes than an Excel file. Then upload it to Colab using the `upload` button in the left panel or by simply dragging and dropping.\n",
         "\n",
-        "  2. In the next cell import the Excel sheet to a pandas DataFrame. To find appropriate functions for the next steps either have a look at the [pandas documentation](https://pandas.pydata.org/docs/reference/index.html), or remember [your best friend](https://www.google.com/) when writing code.\n",
+        "  2. In the next cell import the sheet to a pandas DataFrame. To find appropriate functions for the next steps either have a look at the [pandas documentation](https://pandas.pydata.org/docs/reference/index.html), or remember [your best friend](https://www.google.com/) when writing code.\n",
         "\n"
       ],
       "metadata": {
@@ -230,8 +242,7 @@
       "source": [
         "\"\"\"Read in an Excel file\"\"\"\n",
         "import pandas as pd\n",
-        "fileName = 'WorldEnergyBalancesHighlights2021.xlsx'\n",
-        "sheetName = 'TimeSeries_1971-2020'\n",
+        "fileName = 'WorldEnergyBalancesHighlights2023.csv'\n",
         "data = ##Complete here##"
       ],
       "metadata": {
@@ -275,7 +286,7 @@
       "cell_type": "code",
       "source": [
         "\"\"\"Get values for latest year\"\"\"\n",
-        "lastYear = max([colName for colName in ##Complete here## if isinstance(colName, int)])\n",
+        "lastYear = ##Complete here##\n",
         "filterData = countryData[##Complete here##]\n",
         "\n",
         "# Display data\n",
@@ -300,10 +311,14 @@
       "cell_type": "code",
       "source": [
         "\"\"\"Filter out Totals and bad characters\"\"\"\n",
+        "# Remove rows\n",
         "remove = '|'.join(['Production','Total','GWh'])\n",
         "filterData = filterData[~filterData['Product'].str.##Complete here##]\n",
         "filterData = filterData[~filterData['Flow'].str.##Complete here##]\n",
-        "filterData = filterData[[type(i) is not str for i in ##Complete here##]]"
+        "\n",
+        "# Convert input values to numeric\n",
+        "filterData[lastYear] = filterData[lastYear].astype(##Complete here##)\n",
+        "filterData = filterData[[type(i) is not str for i in filterData[lastYear]]]"
       ],
       "metadata": {
         "id": "QclZtJU2MvMh"
@@ -515,7 +530,8 @@
         "def draw_Country_Sankey()##Complete here##:\n",
         "    \"\"\"This function creates a Sankey diagram for the data contained in the specified\n",
         "    .xlsx file according to the specified parameters\"\"\"\n",
-        "    \n",
+        "      ##Complete here##\n",
+        "\n",
         "    # Function definitions for each processing stage\n",
         "    def get_country_data()##Complete here##:\n",
         "        \"\"\"Extract data for desired country from Excel sheet to pandas dataFrame\"\"\"\n",
@@ -548,7 +564,7 @@
         "\n",
         "    diagramParams={\n",
         "        ##Complete here##\n",
-        "    } \n",
+        "    }\n",
         "\n",
         "    # Update default parameters if other parameters are passed to the function\n",
         "    ##Complete here##\n",
@@ -606,12 +622,12 @@
       "cell_type": "code",
       "source": [
         "# Define variables\n",
-        "fileName = 'WorldEnergyBalancesHighlights2021.xlsx'\n",
-        "sheetName = 'TimeSeries_1971-2020'\n",
+        "fileName = 'WorldEnergyBalancesHighlights2023.csv'\n",
         "country = 'France'\n",
+        "year = '2021'\n",
         "\n",
         "# Call function\n",
-        "diagram = ds.draw_Country_Sankey(fileName, sheetName, {'countryName':country})\n",
+        "diagram = ds.draw_Country_Sankey(fileName, {'year':year, 'countryName':country})\n",
         "\n",
         "# Display Sankey\n",
         "display(diagram)"
