--- a/L4_Drawing_Sankeys.ipynb
+++ b/L4_Drawing_Sankeys.ipynb
@@ -98,7 +98,7 @@
       "cell_type": "markdown",
       "source": [
         "3.   In the `us-energy-consumption.csv` file convert the data into the form \"source [value] target\" required for SankeyMATIC. (Hint: Consider the & function in Excel. CONCATENATE also works but is not best practice.)\n",
-        "4.   Paste the data into SankeyMATIC and \"Preview\". This example is based on the [Sankey diagrams of US energy consumption from the Lawrence Livermore National Laboratory](https://flowcharts.llnl.gov/content/assets/images/energy/us/Energy_US_2019.png). Play with the functions in SankeyMATIC, including dragging the flows, to get it to look like the LLNL example. Take a screen shot.  \n",
+        "4.   Paste the data into SankeyMATIC and \"Preview\". This example is based on the [Sankey diagrams of US energy consumption from the Lawrence Livermore National Laboratory](https://flowcharts.llnl.gov/commodities/energy). Play with the functions in SankeyMATIC, including dragging the flows, to get it to look like the LLNL example. Take a screen shot.  \n",
         "5. Make a note of some of the frustrations you have using this online tool.  \n",
         "\n",
         "\n",
