--- a/L4_Drawing_Sankeys.ipynb
+++ b/L4_Drawing_Sankeys.ipynb
@@ -79,7 +79,7 @@
         "cellView": "form",
         "id": "u4GrDePC5upS"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -89,10 +89,80 @@
         "files.download('example_data/us-energy-consumption.csv')"
       ],
       "metadata": {
-        "id": "Cui6IGKgPPfV"
+        "id": "Cui6IGKgPPfV",
+        "outputId": "5e393b08-1133-469e-a15f-df8300a23fc0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_77756da3-6f01-4ab7-848b-fdfd996c3c30\", \"us-energy-consumption.csv\", 1866)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -545,7 +615,7 @@
       "cell_type": "markdown",
       "source": [
         "###A - IEA Sankey\n",
-        "In this final section, we want to create an energy consumption Sankey diagram.  You might want to choose a country that you are analysing for Assignment 1. The [energy_consumption](https://colab.research.google.com/github/Resource-Efficiency-Collective/coding-tutorials/blob/main/energy_consumption.ipynb) notebook contains an example of a Sankey diagram for US energy consumption. Please open it up and follow the steps to create a version for your country.\n",
+        "In this final section, we want to create an energy consumption Sankey diagram.  You might want to choose a country that you are analysing for Assignment 1. The [energy_consumption](https://colab.research.google.com/github/Resource-Efficiency-Collective/coding-tutorials/blob/main/energy_consumption.ipynb) notebook contains an example of a Sankey diagram for US energy consumption. Please open it up and follow the steps to create a version for your country. If you get lost please check out the [solutions sheet](https://github.com/Resource-Efficiency-Collective/coding-tutorials/blob/main/energy_consumption_solution.ipynb)\n",
         "\n",
         "Here's an attempt at a New Zealand energy Sankey:\n",
         "\n",
